CHANGES IN VERSION 1.35.5
-------------------------

NEW FEATURES

    o new functions `seqUnitCreate()`, `seqUnitSubset()` and `seqUnitMerge()`


CHANGES IN VERSION 1.35.3
-------------------------

NEW FEATURES

    o new functions `seqGet2bGeno()` and `seqGetAF_AC_Missing()`

UTILITIES

    o remove the deprecated '.progress' in `seqMissing()`, `seqAlleleCount()`
      and `seqAlleleFreq()`


CHANGES IN VERSION 1.35.2
-------------------------

NEW FEATURES

    o new function `seqGetData(, "$dosage_sp")` for a sparse matrix of dosages

UTILITIES

    o add `summary.SeqUnitListClass()`

BUG FIXES

    o `seqUnitApply()` works correctly with selected samples if 'parallel' is
      a non-fork cluster

    o `seqVCF2GDS()` and `seqVCF_Header()` work correctly if the VCF header has
       white space


CHANGES IN VERSION 1.32.0
-------------------------

NEW FEATURES

    o new option 'ret.idx' in `seqSetFilter()` for unsorted sample and variant
      indices

    o new option 'ret.idx' in `seqSetFilterAnnotID()` for unsorted variant
      index

    o rewrite the function `seqSetFilterPos()`: new options 'ref' and 'alt',
      'multi.pos=TRUE' by default

    o new option 'packed.idx' in `seqAddValue()` for packing an indexing
      variable

    o new option 'warn' in `seqSetFilter()` to enable or disable the warning

    o new functions `seqNewVarData()` and `seqListVarData()` for
      variable-length data

UTILITIES

    o allow no variant in `seqApply()` and `seqBlockApply()`

    o the list object returned from `seqGetData()` always have names if there
      are more than one input variable names

BUG FIXES

    o `seqGDS2VCF()` should output "." instead of NA in the FILTER column

    o `seqGetData()` should support factor when '.padNA=TRUE' or '.tolist=TRUE'
    
    o fix `seqGDS2VCF()` with factor variables

    o `seqSummary(gds, "$filter")` should return a data frame with zero row if
      'annotation/filter' is not a factor


CHANGES IN VERSION 1.30.0